--- a/index.html
+++ b/index.html
@@ -424,24 +424,24 @@
           </header>
           <div class="latest-projects__inner container" data-aos="fade">
             <div class="row">
-              <div class="col-lg-3 col-md-3 col-sm-6">
-                  <a class="m-1" href="img/2.png" data-rel="lightcase:my-slideshow">
-                      <img class="img-thumbnail" src="img/2.png" alt="Basic Example 1" />
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
+                  <a href="img/1@2x.png" data-rel="lightcase:my-slideshow">
+                      <img class="img-fluid" src="img/1@2x.png" alt="Basic Example 1" style="max-width: 100%;" />
                   </a>
               </div>
-              <div class="col-lg-3 col-md-3 col-sm-6">
-                  <a class="m-1" href="img/2.png" data-rel="lightcase:my-slideshow">
-                      <img class="img-thumbnail" src="img/2.png" alt="Basic Example 2" />
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
+                  <a href="img/1@2x.png" data-rel="lightcase:my-slideshow">
+                      <img class="img-thumbnail" src="img/1@2x.png" alt="Basic Example 2" style="max-width: 100%;"/>
                   </a>
               </div>
-              <div class="col-lg-3 col-md-3 col-sm-6">
-                  <a class="m-1" href="img/2.png" data-rel="lightcase:my-slideshow">
-                      <img class="img-thumbnail" src="img/2.png" alt="Basic Example 3" />
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
+                  <a href="img/1@2x.png" data-rel="lightcase:my-slideshow">
+                      <img class="img-thumbnail" src="img/1@2x.png" alt="Basic Example 3" style="max-width: 100%;"/>
                   </a>
               </div>
-              <div class="col-lg-3 col-md-3 col-sm-6">
-                  <a class="m-1" href="img/2.png" data-rel="lightcase:my-slideshow">
-                      <img class="img-thumbnail" src="img/2.png" alt="Basic Example 4" />
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
+                  <a href="img/1@2x.png" data-rel="lightcase:my-slideshow">
+                      <img class="img-thumbnail" src="img/1@2x.png" alt="Basic Example 4" style="max-width: 100%;" />
                   </a>
               </div>
               
