--- a/index.html
+++ b/index.html
@@ -411,59 +411,69 @@
          
           <div class="latest-projects__inner container " data-aos="fade">
             <div class="container">
-              <h1 class="article__heading heading heading--size-large ar text-center my-5">استأجر الآن واستثمر في يوتوبيا<br> <span class="color-yellow"> مجمع تجاري متكامل في قلب مكة!</span>
+              <h1 class="article__heading heading heading--size-large ar text-center mt-6 mb-5">استأجر الآن واستثمر في يوتوبيا<br> <span class="color-yellow"> مجمع تجاري متكامل في قلب مكة!</span>
               </h1>
   
             </div>
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/1.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/1.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-fluid" src="img/Gallery/1.jpg" alt 1" style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/2.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/2.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/2.jpg"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/3.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/3.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/3.jpg"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/4.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/4.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/4.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/4.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/4.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/4.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/5.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/5.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/5.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/6.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/6.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/6.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/7.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/7.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/7.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
-                  <a href="img/Gallery/8.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/8.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/8.jpg"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
-                  <a href="img/Gallery/9.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1000, "maxHeight":800}'>
+                  <a href="img/Gallery/9.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
                       <img class="img-thumbnail" src="img/Gallery/9.jpg"  style="max-width: 100%;"  />
+                  </a>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
+                  <a href="img/Gallery/10.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
+                      <img class="img-thumbnail" src="img/Gallery/10.jpg"  style="max-width: 100%;"  />
+                  </a>
+              </div>
+              <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
+                  <a href="img/Gallery/11.jpg" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
+                      <img class="img-thumbnail" src="img/Gallery/11.jpg"  style="max-width: 100%;"  />
                   </a>
               </div>
               
