--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
   <!-- Arabic Font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@200;500&display=swap" rel="stylesheet">
   
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
-
   <title>الصفحه الرئيسيه</title>
   <style>
     .about-section h2{
@@ -366,62 +364,62 @@
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/1.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}' >
-                      <img loading="lazy" class="img-fluid" src="img/Gallery/1.webp" alt 1" style="max-width: 100%;" />
+                      <img class="img-fluid" src="img/Gallery/1.webp" alt 1" style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/2.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/2.webp"  style="max-width: 100%;"/>
+                      <img class="img-thumbnail" src="img/Gallery/2.webp"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/3.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/3.webp"  style="max-width: 100%;"/>
+                      <img class="img-thumbnail" src="img/Gallery/3.webp"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/4.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/4.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/5.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/5.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/5.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/6.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/6.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/6.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/7.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/7.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/7.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/8.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/8.webp"  style="max-width: 100%;" />
+                      <img class="img-thumbnail" src="img/Gallery/8.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/9.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/9.webp"  style="max-width: 100%;"  />
+                      <img class="img-thumbnail" src="img/Gallery/9.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/10.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/10.webp"  style="max-width: 100%;"  />
+                      <img class="img-thumbnail" src="img/Gallery/10.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/11.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img loading="lazy" class="img-thumbnail" src="img/Gallery/11.webp"  style="max-width: 100%;"  />
+                      <img class="img-thumbnail" src="img/Gallery/11.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               
