--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
             <div class="row">
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/1.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}' >
-                      <img class="img-fluid" src="img/Gallery/1.webp" alt 1" style="max-width: 100%;" />
+                      <img class="img-fluid" src="img/Gallery/1.webp" style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
