--- a/index.html
+++ b/index.html
@@ -361,7 +361,7 @@
               </h1>
   
             </div>
-            <div class="row">
+            <div class="row" data-aos="fade">
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/1.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}' >
                       <img class="img-fluid" src="img/Gallery/1.webp" style="max-width: 100%;" />
