--- a/index.html
+++ b/index.html
@@ -432,7 +432,7 @@
             </h1>
 
           </div>
-          <div class="article__map map">
+          <div class="article__map map " data-aos="fade">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d5892.580605296027!2d39.79909722317571!3d21.36946748036656!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x15c21bde31c89edd%3A0xe9a4257c0e161ba8!2sUtopia%20Complex!5e1!3m2!1sar!2seg!4v1732031683271!5m2!1sar!2seg" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
             <div class="map__inner container">
               <div class="contact-block">
