--- a/index.html
+++ b/index.html
@@ -364,62 +364,62 @@
             <div class="row" data-aos="fade">
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/1.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}' >
-                      <img class="img-fluid" src="img/Gallery/1.webp" style="max-width: 100%;" />
+                      <img class="deferred-image img-fluid" data-src="img/Gallery/1.webp" style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/2.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/2.webp"  style="max-width: 100%;"/>
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/2.webp"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/3.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/3.webp"  style="max-width: 100%;"/>
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/3.webp"  style="max-width: 100%;"/>
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/4.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/4.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/4.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/4.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/4.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/5.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/5.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/5.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/6.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/6.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/6.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/7.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/7.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/7.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center">
                   <a href="img/Gallery/8.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/8.webp"  style="max-width: 100%;" />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/8.webp"  style="max-width: 100%;" />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/9.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/9.webp"  style="max-width: 100%;"  />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/9.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/10.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/10.webp"  style="max-width: 100%;"  />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/10.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               <div class="col-xl-4 col-lg-4 col-md-6 col-12 mb-4 text-center" >
                   <a href="img/Gallery/11.webp" data-rel="lightcase:my-slideshow" data-lc-options='{"maxWidth":1900, "maxHeight":1045}'>
-                      <img class="img-thumbnail" src="img/Gallery/11.webp"  style="max-width: 100%;"  />
+                      <img class="deferred-image img-thumbnail" data-src="img/Gallery/11.webp"  style="max-width: 100%;"  />
                   </a>
               </div>
               
@@ -529,6 +529,16 @@
 
   <!-- JavaScript-->
   <script src="js/main.js"></script>
+  <script>
+    window.addEventListener("load", () => {
+      // Select all images with `data-src`
+      const images = document.querySelectorAll(".deferred-image");
+      images.forEach(img => {
+        img.src = img.dataset.src; // Replace placeholder with the actual image
+        img.onload = () => img.classList.add("loaded"); // Optional: Add a 'loaded' class
+      });
+    });
+  </script>
 </body>
 
 </html>
