--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <link rel="stylesheet" href="css/revolution.css">
   <link rel="stylesheet" href="css/main.css">
   <link rel="stylesheet" href="css/lightcase.css">
-
+  <link rel="stylesheet" href="fontawesome/css/all.min.css">
   <!-- Arabic Font -->
   <link href="https://fonts.googleapis.com/css2?family=Noto+Kufi+Arabic:wght@200;500&display=swap" rel="stylesheet">
   
