--- a/index.html
+++ b/index.html
@@ -428,7 +428,7 @@
         </section>
         <section>
           <div class="container">
-            <h1 class="article__heading heading heading--size-large ar text-center">تواصل معنا
+            <h1 class="article__heading heading heading--size-large ar text-center mb-5">تواصل معنا
             </h1>
 
           </div>
