--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
     <main>
       <div class="webpage__main-slider main-slider">
           <!-- Start revolution slider-->
-          <div class="rev_slider_wrapper fullscreen-container">
+          <div class="rev_slider_wrapper fullscreen-container swipe">
             <div class="rev_slider tp-overflow-hidden fullscreenbanner" id="rev_slider" data-version="5.4.1" ">
               <ul>
                 <!-- Slide 1-->
